--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,11 +13,21 @@
 }
 
 .logo {
+	width: 200px;
   display: flex;
   align-items: center;
   gap: 10px;
+  text-decoration: none; /* リンクのデフォルトの装飾を削除 */
+  color: inherit; /* 親要素の色を継承 */
 }
 
+.logo svg {
+  cursor: pointer; /* カーソルをポインタに変更 */
+}
+
+.logo h1 {
+  margin: 0; /* マージンをリセット */
+}
 .content {
   flex: 1;
   display: flex;
@@ -36,8 +46,8 @@
 }
 
 .promptContainer {
-	margin-top: -60px;
-
+	margin-top: -50px;
+	margin-bottom: 20px;
 }
 
 .promptInput {
@@ -46,7 +56,6 @@
   border: 1px solid #ddd;
   border-radius: 10px;
   background-color: #f0f0f0;
-	margin-bottom:20px;
 }
 
 .canvasImageContainer {
@@ -112,12 +121,15 @@
 
 .canvas {
   border: 1px solid black;
+  width: 512px; /* 固定幅 */
+  height: 512px; /* 固定高さ */
+  display: block; /* ブロック要素に設定 */
 }
 
 .image {
-  margin-top:42px;
   width: 512px;
   height: 512px;
   border: 1px solid black;
+  margin-top: 42px; /* 画像の上にスペースを追加 */
 }
-
+.h1 { font-size: 28px; }
