--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif !important;
 
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
