--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -122,16 +122,18 @@
 .canvas {
   border: 1px solid black;
   height: 512px;
+  width: 512px;
   margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .image {
   width: 512px;
   height: 512px;
   border: 1px solid black;
-  margin-top: 22px;
-  margin-right: 20px;
+  margin-top: 30px;
   margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 .footer {
@@ -139,7 +141,6 @@
   padding: 10px 0;
   text-align: center;
   background-color: #f8f8f8;
-
 }
 
 @media (max-width: 768px) {
