--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -39,6 +39,7 @@
 }
 
 .promptInput {
+	color: #222;
   width: 300px;
   padding: 10px;
   border: 1px solid #ddd;
@@ -108,6 +109,7 @@
 }
 
 .button {
+	color: #222;
   background-color: #f0f0f0;
   border: 1px solid #ddd;
   border-radius: 10px;
@@ -119,6 +121,7 @@
 .button:hover {
   background-color: #e0e0e0;
 }
+
 .canvas {
   border: 1px solid black;
   height: 512px;
